# scx-music

./: .gitignore  .scx-code-agent.yaml  AGENTS.md  CLAUDE.md  README.md  cliff.toml  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  code-agent.yaml
.wiki/: README.md  ai-context.md  architecture.md  backend.md  frontend.md  ipc.md  risks.md  state.md  storage.md
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-lyrics-lock.json  desktop-lyrics.json  mini-player.json  shortcuts.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  audio.rs  error.rs  lib.rs  main.rs
src-tauri/src/audio/: analyzer_cmds.rs  commands.rs  device.rs  engine.rs  mod.rs  tracker.rs  types.rs
src-tauri/src/commands/: autostart.rs  bootstrap.rs  cache.rs  import_export.rs  lyrics.rs  mod.rs  playlists.rs  settings.rs  shortcuts.rs  songs.rs  stats.rs  window.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src/components/: AnalysisView.vue  AppSidebar.vue  IconButtonWithTooltip.vue  LibraryView.vue  LyricsDisplay.vue  NowPlayingOverlay.vue  PlayQueueDrawer.vue  PlayerBar.vue  ReportTab.vue  SettingsView.vue  StatsView.vue  UpdateDialog.vue
src/composables/: useAnimation.ts  useAudioDevice.ts  useAutoUpdate.ts  useCache.ts  useDebounceSearch.ts  useDesktopLyrics.ts  useDraggableProgress.ts  useGlobalShortcuts.ts  useI18n.ts  useImportExport.ts  useLazyImages.ts  useLibrary.ts  useLibraryAnalysis.ts  useListeningReport.ts  useListeningStats.ts  (+17 more)
(+52 files in other folders)
