[package]
name = "scx-music"
version = "0.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scx_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
rodio = { version = "0.19", features = ["symphonia-all"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sys-locale = "0.3"
thiserror = "1.0"
rustfft = "6.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
